validator not working on books, series
